fixed overflow

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -6,7 +6,7 @@
 }
 
 .profile-box {
-  height: 256px;
+  height: 320px;
   width: 240px;
   display: flex;
   flex-direction: column;
@@ -49,4 +49,34 @@
   padding: 5px;
   background-color: white;
   color: black;
+}
+
+.badges {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.badges a{
+  text-decoration: none;
+}
+
+@media (max-width: 767px) {
+  .badges {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 768px) {
+  .badges {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 992px) {
+  .badges {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
